--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,10 @@ android {
         }
         debug {
             debuggable true
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     lintOptions {
@@ -117,4 +121,7 @@ dependencies {
 
     // optional - RxJava support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
+
+    //数据加密
+    implementation "androidx.security:security-crypto:1.0.0-alpha02"
 }
